# SwiftTransformer

./: .gitmodules  CMakeLists.txt  README.md  environment.yml
src/csrc/kernel/: CMakeLists.txt  count_nan.cu  flash_attn_context_stage_attention.cu  flash_attn_context_stage_attention.h  fused_decoding_stage_attention.cu  softmax.cu
src/csrc/layer/: CMakeLists.txt  attention.cc
src/csrc/model/gpt/: gpt.cc  gpt.h  gpt_weight.cc
src/unittest/util/: cublas_wrapper.cc
